# motoman_interaction

./: .gitignore  README.md
ar_marker_tracking/: CMakeLists.txt  package.xml
ar_marker_tracking/data/: trajectory.txt
ar_marker_tracking/launch/: README.md  ar_alvar.launch  ar_pose_single.launch  ar_pose_single_kinect.launch  ar_pose_single_test.launch  camera_streaming.launch  rosbag.rviz  single_camera_streaming.launch
ar_marker_tracking/scripts/: color_recognition_server.py  color_recognition_test.py  color_subscriber_test.py  euler_to_quaternion.py  plot_trajectory.py  tf_sub_test.py  tf_subscriber.py  tf_subscriber_test.py  tf_test.py  trajectory_recorder.py
ar_marker_tracking/src/: .#tf_translator.cpp  tf_subscriber.cpp  tf_translator.cpp
bbox_cap_img/: CMakeLists.txt  package.xml
bbox_cap_img/scripts/: bbox_cap_img.py  bbox_cap_img_client.py  bbox_cap_img_client_.py  bbox_cap_img_client_old.py  bbox_cap_img_client_tf.py  bbox_cap_img_client_tf_test.py
color_recognition/: CMakeLists.txt  package.xml
color_recognition/launch/: single_camera_streaming.launch
color_recognition/scripts/: color_recognition.py  color_recognition_server.py  color_recognition_server_.py  color_subscriber.py  color_subscriber_test.py  recognition_class.py  recognition_class_.py  recognition_class_test.py
generate_picking_command/: CMakeLists.txt  package.xml
generate_picking_command/scripts/: generate_picking_command.py  generate_picking_command_for_pick_and_place.py  generate_picking_command_for_pick_and_place2.py
hand_tracking/: CMakeLists.txt  package.xml
hand_tracking/launch/: kinect_camera_streaming.launch  kinect_streaming.launch  world.launch
hand_tracking/urdf/: kinect_teaching_base.urdf.xacro
motoman_interaction_msgs/: CMakeLists.txt  package.xml
motoman_interaction_msgs/msg/: BoundingBoxWithTag.msg  BoundingBoxWithTagArray.msg  HandPosture.msg  ImageArray.msg  MotomanPicking.msg  PickingInteraction.msg  PoseArray.msg  StringArray.msg  StringArrayWithStatus.msg  Teaching3D.msg
motoman_interaction_msgs/srv/: ImageRecognition.srv  ImageRecognitionWithStatus.srv
teaching_space/: CMakeLists.txt  package.xml
teaching_space/json/: workspace_info.json  workspace_info_for_clean_up.json  workspace_info_for_pick_and_place.json
teaching_space/scripts/: object_detector_and_pf.py  single_camera_recording.py
teaching_space/scripts/Box/: find_objects.py  initializer.py  particle_filter.py  put_the_object_into_a_box.py
teaching_space/scripts/Place/: color_detection.py  find_objects.py  initializer.py  initializer_.py  particle_filter.py  perspective_transform.py  pick_and_place.py  pick_and_place2.py
teaching_space/scripts/beta/: object_detector_and_pf.py  object_detector_and_pf_beta.py
