<?xml version="1.0"?>
<package>
  <name>bbox_cap_img</name>
  <version>0.0.1</version>
  <description>The bbox_cap_img package</description>

  <maintainer email="k104073r@mail.kyutech.jp">Ryodo Tanaka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>motoman_interaction_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>motoman_interactive_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
