<?xml version="1.0"?>
<package>
  <name>motoman_interaction_msgs</name>
  <version>0.1.0</version>
  <description>The motoman_interaction_msgs package</description>
  
  <maintainer email="k104073r@mail.kyutech.jp">Ryodo Tanaka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_generation</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
